Created my hero site!!!

--- a/index.html
+++ b/index.html
@@ -1,1 +1,42 @@
-<h1>Hello there</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Wreck-It Ralph</title>
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
+</head>
+<body>
+
+	<div class="wrapper">
+		<header>
+			<img src="img/profile.jpg">
+			<h1>Wreck-It Ralph</h1>
+		</header>
+		<div class="content">
+			<h2>About Wreck-It Ralph</h2>
+			<p>An 8-bit video-game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
+			<h2>Characteristics of Wreck-It Ralph</h2>
+			<ol>
+				<li>He's super cool</li>
+				<li>He's treated as bad-ass</li>
+				<li>He's friendly to glitchy-girls</li>
+			</ol>
+			<img class="big-image" src="img/big-image.jpg">
+			<p class="caption">Ralph walking forward</p>
+			<h2>Wreck-It Ralph's friends:</h2>
+			<ul class="no-discs">
+				<li><a href="http://adventuretime.wikia.com/wiki/Jake" target="_blank" title="Visit Jake's page">Jake</a> from Adventure Time</li>
+				<li><a href="http://fhif.wikia.com/wiki/Bloo" target="_blank" title="Visit Bloo's page">Bloo</a> from Fosters</li>
+				<li><a href="https://en.wikipedia.org/wiki/King_Arthur%27s_Disasters" target="_blank" title="Visit Arthur's page">Arthur</a> from King Arthur's disasters</li>
+			</ul>
+			<div class="footer">
+				<ul class="no-discs">
+					<li>Made by <a href="http://mrra.co" target="_blank" title="View Rich's website">Rich Armstrong</a></li>
+					<li>Made with <a href="http://skillshare.com" target="_blank" title="Visit the Skillshare website">Skillshare</a></li>
+					<li>&copy; 2015</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+
+</body>
+</html>
