--- a/index.html
+++ b/index.html
@@ -5,36 +5,38 @@
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
-	<div class="wrapper">
-		<header>
-			<img class="profile-image" src="img/profile.jpg">
-			<h1>Wreck-It Ralph</h1>
-		</header>
-		<div class="content">
-			<h2>About Ralph</h2>
-			<p>Ralph's about copy/text</p>
-			<h2>Ralph's characteristics</h2>
-			<ol>
-				<li>List item 1</li>
-				<li>List item 2</li>
-				<li>List item 3</li>
-			</ol>
-			<img class="big-image" src="img/big-image.jpg">
-			<p class="caption">This is Ralph's big image</p>
-			<h2>Ralph's friends:</h2>
-			<ul>
-				<li>List item 1</li>
-				<li>List item 2</li>
-				<li>List item 3</li>
-			</ul>
-		</div>
-		<footer>
-			<ul>
-				<li>Made by <a href="http://mrra.co" target="_blank" title="Open Rich's website">Rich Armstrong</a></li>
-				<li>Made during a <a href="http://skillshare.com" target="_blank" title="Open the Skillshare website">Skillshare</a> class</li>
-				<li>&copy; 2015</li>
-			</ul>
-		</footer>
+
+<div class="wrapper">
+	<header>
+		<img src="img/profile.jpg">
+		<h1>Wreck-It Ralph</h1>
+	</header>
+	<div class="content">
+		<h2>About Ralph</h2>
+		<p>An 8-bit video-game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
+		<h2>Ralph's characteristics</h2>
+		<ol>
+			<li>He's super cool</li>
+			<li>He's treated as bad-ass</li>
+			<li>He's friendly to glitchy-girl game characters</li>
+		</ol>
+		<img class="big-image" src="img/big-image.jpg">
+		<p class="caption">This is Ralph in action</p>
+		<h2>Ralph's friends</h2>
+		<ul>
+			<li><a href="http://adventuretime.wikia.com/wiki/Jake" target="_blank" title="Visit Jake's page">Jake</a> from Adventure Time</li>
+			<li><a href="http://fhif.wikia.com/wiki/Bloo" target="_blank" title="Visit Bloo's page">Bloo</a> from Fosters</li>
+			<li><a href="https://en.wikipedia.org/wiki/King_Arthur%27s_Disasters" target="_blank" title="Visit Arthur's page">Arthur</a> from King Arthur's disasters</li>
+		</ul>
 	</div>
+	<footer>
+		<ul>
+			<li>Made by <a href="http://mrra.co" target="_blank" title="View Rich's website">Rich</a></li>
+			<li>Made during a <a href="http://skillshare.com" target="_blank" title="View Skillshare's website">Skillshare</a> class</li>
+			<li>&copy; 2015</li>
+		</ul>
+	</footer>
+</div>
+
 </body>
 </html>
