--- a/alt2.html
+++ b/alt2.html
@@ -24,9 +24,9 @@
 		<p class="caption">This is Ralph in action</p>
 		<h2>Ralph's friends</h2>
 		<ul>
-			<li><a href="http://adventuretime.wikia.com/wiki/Jake" target="_blank" title="Visit Jake's page">Jake</a> from Adventure Time</li>
-			<li><a href="http://fhif.wikia.com/wiki/Bloo" target="_blank" title="Visit Bloo's page">Bloo</a> from Fosters</li>
-			<li><a href="https://en.wikipedia.org/wiki/King_Arthur%27s_Disasters" target="_blank" title="Visit Arthur's page">Arthur</a> from King Arthur's disasters</li>
+			<li><a href="http://roxyannne.github.io/cartoon-hero/" target="_blank" title="Visit Vanellope's page">Vanellope von Schweetz</a> from Wreck-it Ralph</li>
+			<li><a href="http://hayleysg.github.io/cartoon-hero/index.html" target="_blank" title="Visit Finn's page">Finn</a> from Adventure Time</li>
+			<li><a href="https://hbottino.github.io/cartoon-hero/" target="_blank" title="Visit Rapunzel's page">Rapunzel</a> from, well,  Rapunzel!</li>
 		</ul>
 	</div>
 	<footer>
