--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Wreck-It Ralph</title>
+	<title>Average Linux User</title>
 	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
@@ -9,31 +9,28 @@
 <div class="wrapper">
 	<header>
 		<img src="img/profile.jpg">
-		<h1>Wreck-It Ralph</h1>
+		<h1>Average Linux User</h1>
 	</header>
 	<div class="content">
-		<h2>About Ralph</h2>
-		<p>An 8-bit video-game bad guy who travels the length of the arcade to prove that he's a good guy.</p>
-		<h2>Ralph's characteristics</h2>
-		<ol>
-			<li>He's super cool</li>
-			<li>He's treated as bad-ass</li>
-			<li>He's friendly to glitchy-girl game characters</li>
-		</ol>
-		<img class="big-image" src="img/big-image.jpg">
-		<p class="caption">This is Ralph in action</p>
-		<h2>Ralph's friends</h2>
+		<h2>About</h2>
+		<p>ALU makes tutorials on how to install, configure, and use Linux.</p>
+		<h2>Projects</h2>
 		<ul>
-			<li><a href="http://roxyannne.github.io/cartoon-hero/" target="_blank" title="Visit Vanellope's page">Vanellope von Schweetz</a> from Wreck-it Ralph</li>
-			<li><a href="http://hayleysg.github.io/cartoon-hero/index.html" target="_blank" title="Visit Finn's page">Finn</a> from Adventure Time</li>
-			<li><a href="https://hbottino.github.io/cartoon-hero/" target="_blank" title="Visit Rapunzel's page">Rapunzel</a> from, well,  Rapunzel!</li>
+			<li><a href="https://www.youtube.com/AverageLinuxUser?sub_confirmation=1" target="_blank" title="YouTube">YouTube</a> - video tutorials</li>
+			<li><a href="https://averagelinuxuser.com/" target="_blank" title="AverageLinuxUser.com">AverageLinuxUser.com</a> - text tutorials</li>
+			<li><a href="https://lbry.tv/$/invite/@AVGLinux:2" target="_blank" title="LBRY.tv">LBRY.tv</a> - video tutorial on LBRY.tv (decentralized video platform)</li>
+			<li><a href="https://www.facebook.com/AverageLinuxUser" target="_blank" title="Facebook">Facebook</a></li>
+			<li><a href="https://www.twitter.com/AVGLinuxUser" target="_blank" title="Twitter">Twitter</a></li>
 		</ul>
+		<img class="big-image" src="img/big-image.jpg">
+		<p class="caption">This is ALU learning new things about Linux</p>
 	</div>
 	<footer>
 		<ul>
-			<li>Made by <a href="http://mrra.co" target="_blank" title="View Rich's website">Rich</a></li>
-			<li>Made during a <a href="http://skillshare.com" target="_blank" title="View Skillshare's website">Skillshare</a> class</li>
-			<li>&copy; 2015</li>
+			<li>Made by <a href="https://averagelinuxuser.com/" target="_blank" title="View ALU's website">Average Linux User</a></li>
+			<li>Inspired by <a href="http://mrra.co" target="_blank" title="View Rich's website">Rich Armstrong</a></li>
+			<li>Made during a <a href="https://www.skillshare.com/classes/Hand-Coding-Your-First-Website-HTML-and-CSS-Basics-Original/1483893097/" target="_blank" title="View Skillshare's website">Skillshare</a> class</li>
+			<li>&copy; 2020</li>
 		</ul>
 	</footer>
 </div>
