--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Average Linux User</title>
-	<link rel="stylesheet" type="text/css" href="css/hero.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 
@@ -18,19 +18,13 @@
 		<ul>
 			<li><a href="https://www.youtube.com/AverageLinuxUser?sub_confirmation=1" target="_blank" title="YouTube">YouTube</a> - video tutorials</li>
 			<li><a href="https://averagelinuxuser.com/" target="_blank" title="AverageLinuxUser.com">AverageLinuxUser.com</a> - text tutorials</li>
-			<li><a href="https://lbry.tv/$/invite/@AVGLinux:2" target="_blank" title="LBRY.tv">LBRY.tv</a> - video tutorial on LBRY.tv (decentralized video platform)</li>
-			<li><a href="https://www.facebook.com/AverageLinuxUser" target="_blank" title="Facebook">Facebook</a></li>
-			<li><a href="https://www.twitter.com/AVGLinuxUser" target="_blank" title="Twitter">Twitter</a></li>
 		</ul>
 		<img class="big-image" src="img/big-image.jpg">
 		<p class="caption">This is ALU learning new things about Linux</p>
 	</div>
 	<footer>
 		<ul>
-			<li>Made by <a href="https://averagelinuxuser.com/" target="_blank" title="View ALU's website">Average Linux User</a></li>
-			<li>Inspired by <a href="http://mrra.co" target="_blank" title="View Rich's website">Rich Armstrong</a></li>
-			<li>Made during a <a href="https://www.skillshare.com/classes/Hand-Coding-Your-First-Website-HTML-and-CSS-Basics-Original/1483893097/" target="_blank" title="View Skillshare's website">Skillshare</a> class</li>
-			<li>&copy; 2020</li>
+			<li>Made by <a href="https://averagelinuxuser.com/" target="_blank" title="View ALU's website">Average Linux User</a> during a <a href="https://www.skillshare.com/classes/Hand-Coding-Your-First-Website-HTML-and-CSS-Basics-Original/1483893097/" target="_blank" title="View Skillshare's website">Skillshare</a> class.</li>
 		</ul>
 	</footer>
 </div>
